# pyhms

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  square-20211210-194732.gdat
.github/workflows/: pytest.yml
docs/: Makefile  algorithm.rst  api.rst  conf.py  configuration_options.rst  custom_demes.rst  index.rst  inspecting.rst  problem.rst  requirements.txt  sprout.rst  stop.rst  usage.rst
examples/: gecco_evooss.ipynb  landscape_approximation.ipynb
experiment/: F2_dif_solver_1d.py  F2_diff_solver.py  F2_optimization.ipynb  backup_results.csv  benchmark.py  comp_algo.py  comp_algo_tuning.py  comp_algo_tuning_run.py  comparison.py  comparison_libor.ipynb  coverage_mmop.ipynb  data_file.pkl  initial.ipynb  landscape_approximation.ipynb  nbc_sprout_analysis.ipynb  process_results.ipynb  tuning.py  tuning_run.py
experiment/Libor_Formula/: Task1C_Data_t_u_y.csv  TaskC_Formula.py  TaskC_FormulaNewPoints.py  TaskC_PlotBode.py  TaskC_PlotNyquist.py  TaskC_PointCalculator.py  new_points.txt
experiment/mmop/: BasicFunc.py  DDRB.py  LICENSE.txt  PerformIndicator.py  README.md  example_dynamic.py  example_optim.py  example_static.py  normRandNum.csv
experiment/results/: algo_conf_evaluated.pkl  comp_results.csv  cov_results.pkl  hms_conf_evaluated.pkl  hms_conf_evaluated_ext.pkl  nbc_cut.pkl  nbc_far_enough.pkl  nbc_trunc.pkl  old-new-confs.txt  simple_sprout.pkl  smac_results.csv
hms/: __init__.py  __main__.py  algorithm.py  animate.py  config.py  deme.py  grid.py  gsc.py  initializers.py  loggers.py  lsc.py  plot.py  problem.py  sprout.py  summary.py  tree.py  usc.py  util.py
hms/data/: erikkson_4_1_0.py
hms/demes/: __init__.py  abstract_deme.py  cma_deme.py  ea_deme.py
hms/persist/: __init__.py  deme.py  pers_deme.py  pers_tree.py  solution.py  tree.py
hms/problems/: erikkson.py
hms/single_pop/: __init__.py  sea.py
hms/stop_conditions/: lsc.py
hms/visualisation/: grid.py  plot.py
pyhms/: __init__.py  config.py  hms.py  initializers.py  logging_.py  merge_conditions.py  problem.py  scipy_style.py  sprout.py  tree.py
pyhms/cluster/: cluster.py  consolidator.py  kriging.py  landscape_approximator.py  (+2 more)
scripts/: backup_results.csv  backup_results_1.csv  backup_results_2.csv  backup_results_cutoff.csv  backup_results_new.csv  dif_gen_eval_2.csv  dif_gen_results.csv  fake_erikkson.py  final_test.py  smac_experiment.ipynb  smac_experiment.py  smac_experiment_script.py  smac_experiment_script_aggregated.py  smac_experiment_script_precision.py  smac_functions.py  smac_functions_aggregated.py  smac_functions_new.py  smac_functions_precision.py  test_configurations.py
test/: config.py  test_clusterization.py  test_covariance_estimate.py  test_deme_tree.py  test_dimensionality_reducer.py  test_grid_problem_evaluation.py  test_gsc.py  test_hibernation.py  test_initializers.py  test_integration.py  test_local.py  test_merge_condition.py  test_merge_conditions.py  test_more_levels.py  test_multiwinner.py  test_options.py  test_persistance.py  test_population.py  test_problem.py  test_r5s.py  test_reproducibility.py  test_sea.py  test_sprout.py  test_square.py  test_tree_format.py  test_usc.py
(+92 files in other folders)
